// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COVIDErrorScreen renders COVIDErrorScreen render 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/backbutton.png",
        }
      }
      style={
        Object {
          "height": 75,
          "width": 75,
        }
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "marginTop": -40,
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/NCTRClogo.png",
        }
      }
      style={
        Object {
          "height": 150,
          "width": 150,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderColor": "#884633",
          "borderRadius": 9,
          "borderWidth": 1,
          "marginTop": -150,
          "padding": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#884633",
            "fontSize": 15,
            "margin": 40,
          }
        }
      >
        Sorry, we are not able to let you in the farm because 
        string
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#884633",
            "borderRadius": 9,
            "height": 60,
            "margin": 20,
            "marginBottom": 50,
            "opacity": 1,
            "width": 180,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "marginTop": 18,
            }
          }
        >
          Home
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`CovidInformationScreen renders CovidInformationScreen renders 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "marginTop": 40,
    }
  }
>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "flex-start",
          "opacity": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/backbutton.png",
          }
        }
        style={
          Object {
            "height": 75,
            "width": 75,
          }
        }
      />
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "marginTop": -40,
          "opacity": 1,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/NCTRClogo.png",
          }
        }
        style={
          Object {
            "height": 150,
            "width": 150,
          }
        }
      />
    </View>
    <View>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        First Name
      </Text>
      <TextInput
        allowFontScaling={true}
        editable={false}
        placeholder="string"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#884633",
            "borderRadius": 9,
            "borderWidth": 1,
            "height": 60,
            "margin": 10,
            "paddingHorizontal": 10,
            "width": 300,
          }
        }
        underlineColorAndroid="transparent"
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        Last Name
      </Text>
      <TextInput
        allowFontScaling={true}
        editable={false}
        placeholder="string"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#884633",
            "borderRadius": 9,
            "borderWidth": 1,
            "height": 60,
            "margin": 10,
            "paddingHorizontal": 10,
            "width": 300,
          }
        }
        underlineColorAndroid="transparent"
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        Email
      </Text>
      <TextInput
        allowFontScaling={true}
        editable={false}
        placeholder="string"
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#884633",
            "borderRadius": 9,
            "borderWidth": 1,
            "height": 60,
            "margin": 10,
            "paddingHorizontal": 10,
            "width": 300,
          }
        }
        underlineColorAndroid="transparent"
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        Within the past 24 hours have you or anyone in your household experienced any of the following symptoms: fever (over 100.4 F), sore or dry throat, shortness of breath, chest congestion, cough, loss of taste or sense of smell, sneezing, and/or rash?
      </Text>
      <View
        accessibilityRole="radiogroup"
        accessible={true}
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "flexDirection": "row",
              "padding": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#884633",
                "fontSize": 15,
                "padding": 5,
              }
            }
          >
            Yes
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "borderColor": "rgba(0, 0, 0, 0.54)",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "#884633",
                "fontSize": 15,
                "padding": 5,
              }
            }
          >
            No
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "borderColor": "rgba(0, 0, 0, 0.54)",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            />
          </View>
        </View>
      </View>
      <View>
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "grey",
              "fontSize": 15,
              "margin": 10,
              "marginLeft": 20,
              "width": 300,
            }
          }
        >
          Have you traveled out of the country or out of the state within the past 14 days?
        </Text>
        <View
          accessibilityRole="radiogroup"
          accessible={true}
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "flexDirection": "row",
                "padding": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#884633",
                  "fontSize": 15,
                  "padding": 5,
                }
              }
            >
              Yes
            </Text>
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                Object {
                  "checked": false,
                  "disabled": undefined,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 18,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "rgba(0, 0, 0, 0.54)",
                    "borderRadius": 10,
                    "borderWidth": 2,
                    "height": 20,
                    "margin": 8,
                    "width": 20,
                  }
                }
              />
            </View>
            <Text
              style={
                Object {
                  "color": "#884633",
                  "fontSize": 15,
                  "padding": 5,
                }
              }
            >
              No
            </Text>
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                Object {
                  "checked": false,
                  "disabled": undefined,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 18,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "borderColor": "rgba(0, 0, 0, 0.54)",
                    "borderRadius": 10,
                    "borderWidth": 2,
                    "height": 20,
                    "margin": 8,
                    "width": 20,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        Have you attended an event or gathering of more than 25 people at any point in the last 14 days?
      </Text>
      <View
        accessibilityRole="radiogroup"
        accessible={true}
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "flexDirection": "row",
              "padding": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#884633",
                "fontSize": 15,
                "padding": 5,
              }
            }
          >
            Yes
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "borderColor": "rgba(0, 0, 0, 0.54)",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "#884633",
                "fontSize": 15,
                "padding": 5,
              }
            }
          >
            No
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "borderColor": "rgba(0, 0, 0, 0.54)",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            />
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        Within the past 14 days, have you received a positive test result for COVID-19 or are you awaiting test results for COVID-19?
      </Text>
      <View
        accessibilityRole="radiogroup"
        accessible={true}
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "flexDirection": "row",
              "padding": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#884633",
                "fontSize": 15,
                "padding": 5,
              }
            }
          >
            Yes
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "borderColor": "rgba(0, 0, 0, 0.54)",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "#884633",
                "fontSize": 15,
                "padding": 5,
              }
            }
          >
            No
          </Text>
          <View
            accessibilityLiveRegion="polite"
            accessibilityRole="radio"
            accessibilityState={
              Object {
                "checked": false,
                "disabled": undefined,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderRadius": 18,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "borderColor": "rgba(0, 0, 0, 0.54)",
                  "borderRadius": 10,
                  "borderWidth": 2,
                  "height": 20,
                  "margin": 8,
                  "width": 20,
                }
              }
            />
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        What is your tempurature?
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#884633",
            "borderRadius": 9,
            "borderWidth": 1,
            "height": 60,
            "margin": 10,
            "paddingHorizontal": 10,
            "width": 300,
          }
        }
        underlineColorAndroid="transparent"
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "grey",
            "fontSize": 15,
            "margin": 10,
            "marginLeft": 20,
            "width": 300,
          }
        }
      >
        Is there anything else you would like to share? Questions, concerns, etc.
      </Text>
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        rejectResponderTermination={true}
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "#884633",
            "borderRadius": 9,
            "borderWidth": 1,
            "height": 60,
            "margin": 10,
            "paddingHorizontal": 10,
            "width": 300,
          }
        }
        underlineColorAndroid="transparent"
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#884633",
            "borderRadius": 9,
            "height": 60,
            "margin": 20,
            "marginBottom": 50,
            "opacity": 1,
            "width": 180,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 15,
              "marginTop": 18,
            }
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
